--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Sistema completo de gestão financeira pessoal",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "concurrently \"node server.js\" \"cd gestor-financeiro-frontend && npm start\"",
     "backend": "node server.js",
     "frontend": "cd gestor-financeiro-frontend && npm start",
-    "build": "cd gestor-financeiro-frontend && npm run build",
-    "install-frontend": "cd gestor-financeiro-frontend && npm install"
+    "build": "cd gestor-financeiro-frontend && npm run build && npm run build:copy",
+    "build:copy": "cp -r gestor-financeiro-frontend/build/* public/ || xcopy /E /I gestor-financeiro-frontend\\build\\* public\\",
+    "install-frontend": "cd gestor-financeiro-frontend && npm install",
+    "postinstall": "npm run install-frontend && npm run build"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "keywords": [
     "finance",
