--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ gestor-financeiro-frontend/node_modules/
 *.sqlite
 *.sqlite3
 
+# Banco de dados de desenvolvimento (manter em produção)
+# *.db
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
