--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "backend": "node server.js",
     "frontend": "cd gestor-financeiro-frontend && npm start",
-    "build": "cd gestor-financeiro-frontend && npm run build",
-    "install-all": "npm install && cd gestor-financeiro-frontend && npm install"
+    "build": "cd gestor-financeiro-frontend && npm install && npm run build",
+    "install-all": "npm install && cd gestor-financeiro-frontend && npm install",
+    "postinstall": "cd gestor-financeiro-frontend && npm install && npm run build"
   },
   "engines": {
     "node": ">=18.0.0",
