--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "backend": "node server.js",
     "frontend": "cd gestor-financeiro-frontend && npm start",
     "build": "cd gestor-financeiro-frontend && npm install && npm run build",
-    "install-all": "npm install && cd gestor-financeiro-frontend && npm install",
-    "postinstall": "cd gestor-financeiro-frontend && npm install && npm run build"
+    "install-all": "npm install && cd gestor-financeiro-frontend && npm install"
   },
   "engines": {
     "node": ">=18.0.0",
