--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "backend": "node server.js",
-    "frontend": "cd gestor-financeiro-frontend && npm start",
+    "frontend": "cd gestor-financeiro-frontend && npm run dev",
     "build": "cd gestor-financeiro-frontend && npm install && npm run build",
     "install-all": "npm install && cd gestor-financeiro-frontend && npm install"
   },
