--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "backend": "node server.js",
     "frontend": "cd gestor-financeiro-frontend && npm run dev",
     "build": "cd gestor-financeiro-frontend && npm install && npm run build",
-    "install-all": "npm install && cd gestor-financeiro-frontend && npm install"
+    "install-all": "npm install && cd gestor-financeiro-frontend && npm install",
+    "heroku-postbuild": "cd gestor-financeiro-frontend && npm install && npm run build"
   },
   "engines": {
     "node": ">=18.0.0",
