--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "frontend": "cd gestor-financeiro-frontend && npm run dev",
     "build": "cd gestor-financeiro-frontend && npm install && npm run build",
     "install-all": "npm install && cd gestor-financeiro-frontend && npm install",
+    "postinstall": "cd gestor-financeiro-frontend && npm install && npm run build",
     "heroku-postbuild": "cd gestor-financeiro-frontend && npm install && npm run build"
   },
   "engines": {
