--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: gestor-financeito
     env: node
     plan: free
-    buildCommand: npm install && cd gestor-financeiro-frontend && npm install && npm run build && cd ..
+    buildCommand: npm install
     startCommand: npm start
     envVars:
       - key: NODE_ENV
