--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: gestor-financeito
     env: node
     plan: free
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
