fix: atualiza todas as URLs da API para gestor-financeito.onrender.com
- Corrige netlify.toml com URL da API correta
- Atualiza config.js para usar API do Render em desenvolvimento
- Corrige render.yaml com nome do serviço correto
- Garante que todas as configurações apontem para https://gestor-financeito.onrender.com

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "18.18.0"
-  REACT_APP_API_URL = "https://gestor-financeito-api.onrender.com"
+  REACT_APP_API_URL = "https://gestor-financeito.onrender.com"
 
 [[redirects]]
   from = "/*"
