--- a/gestor-financeiro-frontend/package.json
+++ b/gestor-financeiro-frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.7.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
