--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/MedeirosJunior/Gestor-Financeito#readme",
   "dependencies": {
+    "@libsql/client": "^0.17.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "sqlite3": "^5.1.6"
